<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:orientation="vertical">

<CheckBox
    android:id="@+id/check_chocolate_syrup_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:text="@string/chocolate_syrup_txt"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:onClick="onCheckBoxClicked"/>

<CheckBox
    android:id="@+id/check_sprinkles_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:text="@string/sprinkles_txt"
    app:layout_constraintStart_toStartOf="parent"
    android:onClick="onCheckBoxClicked"/>

<CheckBox
    android:id="@+id/check_crushed_nuts_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:text="@string/crushed_nuts_txt"
    app:layout_constraintStart_toStartOf="parent"
    android:onClick="onCheckBoxClicked"/>

<CheckBox
    android:id="@+id/check_cherries_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:text="@string/cherries_txt"
    app:layout_constraintStart_toStartOf="parent"
    android:onClick="onCheckBoxClicked"/>

<CheckBox
    android:id="@+id/check_orio_cookies_crumbles_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:text="@string/orio_cookie_crumbles_txt"
    app:layout_constraintStart_toStartOf="parent"
    android:onClick="onCheckBoxClicked"/>

<Button
    android:id="@+id/btn_show_toast"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="32dp"
    android:text="@string/show_toast_txt"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_show_toast"
    tools:ignore="OnClick"/>

</LinearLayout>